# ros2_ws

./: .gitignore  .gitmodules
install/mr2_drive/share/mr2_drive/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
script/: mr2_rover.service  rover_startup.sh
setup/: setup.md
src/install/mr2_drive/lib/mr2_drive/: drive_node
src/install/mr2_drive/share/mr2_drive/: package.bash  package.sh  package.xml
src/mr2_action/: CMakeLists.txt  package.xml
src/mr2_action/action/: CoverVision.action  GnssOnly.action
src/mr2_action_interface/: CMakeLists.txt  package.xml
src/mr2_action_interface/action/: CoverVision.action  GnssOnly.action
src/mr2_autonomous/: package.xml  setup.cfg  setup.py
src/mr2_autonomous/config/: filter_chain.yaml
src/mr2_autonomous/launch/: traversability_map.launch.py  traversibility_map.launch.py
src/mr2_autonomous/mr2_autonomous/: gridmap_to_occupancy.py  pc2_to_heightmap.py
src/mr2_can_bus_core/: CMakeLists.txt  package.xml
src/mr2_can_bus_core/include/mr2_can_bus_core/: can_bus_manager.hpp  can_bus_registry.hpp  can_device.hpp
src/mr2_can_hardware_interface/: CMakeLists.txt  package.xml  plugin.xml
src/mr2_can_hardware_interface/src/: can_hw.cpp
src/mr2_description/: CMakeLists.txt  package.xml
src/mr2_description/models/mr2_rover/: model.config  model.sdf
src/mr2_devices_ak_servo/: CMakeLists.txt  package.xml  plugin.xml
src/mr2_devices_ak_servo/src/: ak_servo_device.cpp
src/mr2_drive/: CMakeLists.txt  Readme.md  package.xml  setup.cfg  setup.py
src/mr2_drive/src/: driver_node.cpp  steering_node.cpp
src/mr2_drive_motor/: CMakeLists.txt  package.xml
src/mr2_drive_motor/msg/: Pid.msg
src/mr2_drive_motor/src/: mr2_drive_motor_interface.cpp
src/mr2_drive_motor/srv/: PidParams.srv
src/mr2_dynamixel/: CMakeLists.txt  package.xml
src/mr2_dynamixel/src/: dynamixel_controller.cpp
src/mr2_gazebo/: CMakeLists.txt  package.xml
src/mr2_gazebo/worlds/: rover.sdf
src/mr2_heightmap/: package.xml  setup.cfg  setup.py
src/mr2_heightmap/config/: filter_chain.yaml
src/mr2_heightmap/launch/: traversibility_map.launch.py
src/mr2_heightmap/mr2_heightmap/: pc2_to_heightmap.py
src/mr2_jk_bms/: package.xml  setup.cfg  setup.py
src/mr2_jk_bms/mr2_jk_bms/: bms_node.py
src/mr2_jk_bms_interfaces/: CMakeLists.txt  package.xml
src/mr2_jk_bms_interfaces/msg/: BMSData.msg
src/mr2_launch/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/mr2_launch/config/: mr2_ros_gz_bridge.yaml
src/mr2_launch/launch/: gz.launch.py  mr2_launch.py  real_launch.py  sim.launch.py
src/mr2_launch/rviz/: sim.rviz
src/mr2_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/mr2_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  rover.ros2_control.xacro  rover.srdf  rover.urdf.xacro
src/mr2_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/mr2_rover_auto/: CMakeLists.txt  package.xml  setup.py
src/mr2_rover_auto/behavior_trees/: CoverVision.xml  GnssOnly.xml  MissionTrees.btproj  my_navigate_through_poses.xml  my_navigate_to_pose.xml  navigate_bt.xml  notes on custom bt nodes
src/mr2_rover_auto/config/: ekf.yaml  estimator_params.yaml  nav2_param.yaml  nav2_params.yaml  navsat.yaml
src/mr2_rover_auto/include/mr2_rover_auto/: gps_to_map.hpp
src/mr2_rover_auto/launch/: action.launch.py  estimator.launch.py  nav2.launch.py
src/mr2_rover_auto/maps/: map.yaml
src/mr2_rover_auto/src/: cover_vision_client.cpp  cover_vision_server.cpp  covervision_action_server.cpp  gnss_only_client.cpp  gnss_only_server.cpp  gnssonly_action_server.cpp  gps_heading_imu_node.cpp  mission_action_client.cpp
src/mr2_rover_control/: CMakeLists.txt  package.xml  rover_system.xml  twist_to_commands_controller.xml
src/mr2_rover_control/include/mr2_rover_control/: rover_system.hpp  twist_to_commands_controller.hpp
src/mr2_rover_control/src/: rover_system.cpp  twist_to_commands.cpp  twist_to_commands_controller.cpp
src/mr2_rover_description/: package.xml  setup.cfg  setup.py
src/mr2_rover_description/config/: controllers.yaml  single_joint_controllers.yaml
src/mr2_rover_description/launch/: rover.launch.py  single_joint.launch.py
src/mr2_rover_description/urdf/: manipulator.xacro  rover.urdf.xacro  rover_base.xacro  single_joint.urdf.xacro  swerve_module.xacro
src/mr2_rover_description/worlds/: world.sdf
src/mr2_yolo/: package.xml  setup.cfg  setup.py
src/mr2_yolo/mr2_yolo/: draw.py  yolo_node.py
