<?xml version="1.0"?>
<package format="3">
  <name>mr2_can_hardware_interface</name>
  <version>0.1.0</version>
  <description>ros2_control SystemInterface that wires multiple CanDevice plugins into a single robot arm.</description>

  <maintainer email="you@yourdomain.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Run-time / build dependencies -->
  <depend>mr2_can_bus_core</depend>          <!-- header-only bus framework -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <!-- Export the plugin -->
  <export>
    <pluginlib plugin_manifest="plugin.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
