<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mr2_devices_ak_servo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gmmyung@kaist.ac.kr">mr2</maintainer>
  <license>MIT</license>

  <depend>mr2_can_bus_core</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <pluginlib plugin_manifest="plugin.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
