<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mr2_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation environment for the MR2 robot.</description>
  <maintainer email="gmmyung@kaist.ac.kr">Gyungmin Myung</maintainer>
  <author email="gmmyung@kaist.ac.kr">Gyungmin Myung</author>
  <license>MIT</license>

  <depend>mr2_description</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
