<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mr2_jk_bms</name>
  <version>0.0.0</version>
  <description>Interface nodes for the JK BMS battery management system.</description>
  <maintainer email="gmmyung@kaist.ac.kr">Gyungmin Myung</maintainer>
  <author email="gmmyung@kaist.ac.kr">Gyungmin Myung</author>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>mr2_jk_bms_interfaces</depend>
  <depend>python3-serial</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
