<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mr2_launch</name>
  <version>0.0.0</version>
  <description>Launch files for bringing up and simulating the MR2 robot.</description>
  <maintainer email="gmmyung@kaist.ac.kr">Gyungmin Myung</maintainer>
  <author email="gmmyung@kaist.ac.kr">Gyungmin Myung</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>mr2_description</build_depend>
  <build_depend>mr2_gazebo</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
