<?xml version="1.0"?>
<package format="3">
  <name>mr2_rover_auto</name>
  <version>0.0.1</version>
  <description>Autonomy components for MR2 Rover (launch and config)</description>

  <maintainer email="pianojay@naver.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Core build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Dependencies for what you're launching -->
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>BehaviorTree.CPP</exec_depend>
  <exec_depend>opennav_coverage</exec_depend>
  <exec_depend>Fields2Cover</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
